--- a/info.yaml
+++ b/info.yaml
@@ -4,7 +4,7 @@ project:
   author:       "Andreas Madner"      # Your name
   discord:      "analogandi"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "First attempt in characterizing the SKY130 technology and perform aging experiments"      # One line description of what your project does
-  language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
+  language:     "VHDL" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     50000000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
@@ -17,7 +17,8 @@ project:
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "project.v"
+    - "top.v"
+    - "top.vhdl"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
