--- a/src/config.json
+++ b/src/config.json
@@ -31,7 +31,7 @@
   "//": "https://tinytapeout.com/faq/#how-can-i-map-an-additional-external-clock-to-one-of-the-gpios",
   "CLOCK_PORT": "clk",
   
-  "DISABLE_TIMING": 1
+  "DISABLE_TIMING": 1,
 
   "//": "Configuration docs: https://librelane.readthedocs.io/en/latest/reference/configuration.html",
 
