--- a/info.yaml
+++ b/info.yaml
@@ -5,7 +5,7 @@ project:
   discord:      "analogandi"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "First attempt in characterizing the SKY130 technology and perform aging experiments"      # One line description of what your project does
   language:     "VHDL" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     50000000       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
