--- a/info.yaml
+++ b/info.yaml
@@ -17,9 +17,9 @@ project:
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "ClockGen.vhd"
+    - "ClockGen.vhdl"
     - "InverterWrapper.v"
-    - "InverterChain.vhd"
+    - "InverterChain.vhdl"
     - "top.vhdl"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
