--- a/info.yaml
+++ b/info.yaml
@@ -21,7 +21,8 @@ project:
     - "ClockGen.vhdl"
     - "InverterWrapper.v"
     - "InverterChain.vhdl"
-
+    - "BufferWrapper.v"
+    - "BufferChain.vhdl"
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
